--- a/experience.html
+++ b/experience.html
@@ -413,7 +413,7 @@
 													<div class="box alt">
 														<div class="row gtr-50 gtr-uniform">
 															<div class="col-4"><span class="image fit"><img src="fab fa-html5" alt="" /></span></div>
-															<div class="col-4"><span class="image fit"><img src="images/pic09.jpg" alt="" /></span></div>
+															<div class="col-4"><span class="fab fa-html5"><img src="images/pic09.jpg" alt="" /></span></div>
 															<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
 															<!-- Break -->
 															<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
