--- a/experience.html
+++ b/experience.html
@@ -412,7 +412,7 @@
 <!-- 													<span class="image fit"><img src="images/pic03.jpg" alt="" /></span> -->
 													<div class="box alt">
 														<div class="row gtr-50 gtr-uniform">
-															<div class="col-4"><span class="image fit"><img src="fab fa-html5" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/html5.png" alt="" /></span></div>
 															<div class="col-4"><span class="fab fa-html5"><img src="" alt="" /></span></div>
 															<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
 															<!-- Break -->
