--- a/experience.html
+++ b/experience.html
@@ -413,16 +413,16 @@
 													<div class="box alt">
 														<div class="row gtr-50 gtr-uniform">
 															<div class="col-4"><span class="image fit"><img src="images/html5.png" alt="" /></span></div>
-															<div class="col-4"><span class="image fit"><img src="" alt="images/pic08.jpg" /></span></div>
-															<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/css.png" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/javascript.png" alt="" /></span></div>
 															<!-- Break -->
-															<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
-															<div class="col-4"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
-															<div class="col-4"><span class="image fit"><img src="images/pic09.jpg" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/node.png" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/mongo.png" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/react.png" alt="" /></span></div>
 															<!-- Break -->
-															<div class="col-4"><span class="image fit"><img src="images/pic09.jpg" alt="" /></span></div>
-															<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
-															<div class="col-4"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/jQuery.png" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/postman.png" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/heroku.png" alt="" /></span></div>
 														</div>
 													</div>
 
